<resources>
    <string name="app_name">Spica</string>

    <!-- common block -->
    <string name="common_forward_name">すすむ</string>
    <string name="common_back_name">さがる</string>
    <string name="common_rotate_name">まわる</string>
    <string name="common_left_name">ひだりにまわる</string>
    <string name="common_right_name">みぎにまわる</string>
    <string name="common_if_start_name">もしも</string>
    <string name="common_if_end_name">もしも - おわり</string>
    <string name="common_distance_sensor_above">cmよりとおい？</string>
    <string name="common_distance_sensor_below">cmよりちかい？</string>
    <string name="common_for_start_name">ループ</string>
    <string name="common_for_end_name">ループ - おわり</string>
    <string name="common_break_name">ぬける</string>

    <string name="common_speed_low">おそい</string>
    <string name="common_speed_middle">ふつう</string>
    <string name="common_speed_high">はやい</string>

    <string name="common_time_unit">%sびょう</string>
    <string name="common_count_unit">%sかい</string>

    <string name="common_block_add">+</string>

    <!-- common button-->
    <string name="common_button_ok">ほぞん</string>
    <string name="common_button_cancel">×</string>
    <string name="common_button_delete">すてる</string>

    <!-- common config -->
    <string name="common_network">ネットワーク</string>
    <string name="common_ip_name">IPアドレス</string>
    <string name="common_port_name">ポート番号</string>
    <string name="common_setting">設定</string>
    <string name="common_setting_detail">詳細設定</string>

    <!-- common Error系 -->
    <string name="common_error_text">何らかのError</string>

    <!-- BlockDetailFragment -->
    <string name="block_detail_fragment_compare_above_text">cmよりとおいなら、「はい」へ</string>
    <string name="block_detail_fragment_compare_below_text">cmよりちかいなら、「はい」へ</string>
    <string name="block_detail_fragment_loop_unit_text">かい、くりかえす</string>

    <string name="block_detail_fragment_block_forward_name">@string/common_forward_name</string>
    <string name="block_detail_fragment_block_forward_description">速度と時間を設定して、ロボットを前に動かします。</string>
    <string name="block_detail_fragment_forward_unit_text">びょう、すすむ</string>

    <string name="block_detail_fragment_block_back_name">@string/common_back_name</string>
    <string name="block_detail_fragment_block_back_description">速度と時間を設定して、ロボットを後ろに動かします。</string>
    <string name="block_detail_fragment_back_unit_text">びょう、さがる</string>

    <string name="block_detail_fragment_block_state_left_rotate">@string/common_left_name</string>
    <string name="block_detail_fragment_block_state_right_rotate">@string/common_right_name</string>

    <string name="block_detail_fragment_block_left_name">@string/common_left_name</string>
    <string name="block_detail_fragment_block_left_description">速度と時間を設定して、ロボットを左に回転させます。</string>
    <string name="block_detail_fragment_left_unit_text">びょう、ひだりにまわる</string>

    <string name="block_detail_fragment_block_right_name">@string/common_right_name</string>
    <string name="block_detail_fragment_block_right_description">速度と時間を設定して、ロボットを右に回転させます。</string>
    <string name="block_detail_fragment_right_unit_text">びょう、みぎにまわる</string>

    <string name="block_detail_fragment_block_if_start_name">@string/common_if_start_name</string>
    <string name="block_detail_fragment_block_if_end_name">@string/common_if_end_name</string>
    <string name="block_detail_fragment_block_if_start_description">もしも条件が正しければ、「はい」にすすみます。\nそうでなければ「いいえ」にすすみます。</string>
    <string name="block_detail_fragment_block_state_above">とおい</string>
    <string name="block_detail_fragment_block_state_below">ちかい</string>
    <string name="block_detail_fragment_block_if_start_above">@string/common_distance_sensor_above</string>
    <string name="block_detail_fragment_block_if_start_below">@string/common_distance_sensor_below</string>

    <string name="block_detail_fragment_block_for_start_name">@string/common_for_start_name</string>
    <string name="block_detail_fragment_block_for_end_name">@string/common_for_end_name</string>
    <string name="block_detail_fragment_block_for_start_description">ループブロックに囲まれたブロックが、指定した回数だけ繰り返し実行されます。</string>

    <string name="block_detail_fragment_block_break_name">@string/common_break_name</string>
    <string name="block_detail_fragment_block_break_description">ループブロックのループからぬける</string>

    <!-- ScriptMainActivity -->
    <string name="script_main_activity_send_success">ロボットにめいれいをおくったよ！</string>
    <string name="script_main_activity_failed_empty_block">ブロックがないよ！</string>
    <string name="script_main_activity_failed_empty_ip">IPアドレスが指定されていません</string>

    <!-- ScriptMainAdapter -->
    <string name="script_main_adapter_block_if_above">@string/common_distance_sensor_above</string>
    <string name="script_main_adapter_block_if_below">@string/common_distance_sensor_below</string>

    <!-- UdpReceive -->
    <string name="udp_receive_cancel_dialog">とめています....</string>
    <string name="udp_receive_esp_reboot_command">reboot-now</string>

    <!-- activity_block_detail -->
    <string name="activity_block_detail_block_title">@string/common_error_text</string>
    <string name="activity_block_detail_block_description">@string/common_error_text</string>
    <string name="activity_block_detail_view_finish">@string/common_button_cancel</string>

    <string name="activity_block_detail_block_speed_low">@string/common_speed_low</string>
    <string name="activity_block_detail_block_speed_middle">@string/common_speed_middle</string>
    <string name="activity_block_detail_block_speed_high">@string/common_speed_high</string>

    <string name="activity_block_detail_block_state_left">@string/common_error_text</string>
    <string name="activity_block_detail_block_state_right">@string/common_error_text</string>

    <string name="activity_block_detail_button_delete_text">@string/common_button_delete</string>
    <string name="activity_block_detail_button_ok_text">@string/common_button_ok</string>

    <!-- activity_block_select -->
    <string name="activity_block_select_block_forward_name">@string/common_forward_name</string>
    <string name="activity_block_select_block_rotate_name">@string/common_rotate_name</string>
    <string name="activity_block_select_block_back_name">@string/common_back_name</string>
    <string name="activity_block_select_block_if_start_name">@string/common_if_start_name</string>
    <string name="activity_block_select_block_for_start_name">@string/common_for_start_name</string>
    <string name="activity_block_select_block_break_name">@string/common_break_name</string>

    <!-- activity_setting -->
    <string name="activity_setting_toolbar_title">@string/common_setting</string>
    <string name="activity_setting_ip_name">@string/common_ip_name</string>
    <string name="activity_setting_ip_helper_text" translatable="false">下3桁が機体番号</string>
    <string name="activity_setting_port_name">@string/common_port_name</string>
    <string name="activity_setting_button_view_finish_text">@string/common_button_cancel</string>
    <string name="activity_setting_button_ok_text">@string/common_button_ok</string>
    <string name="activity_setting_button_qr_text">QRコード入力</string>
    <string name="activity_setting_detail_text">@string/common_setting_detail</string>
    <string name="activity_setting_header_network">@string/common_network</string>
    <string name="activity_setting_header_block" translatable="false">ブロックの表示</string>
    <string name="activity_setting_checkbox_text_loop" translatable="false">ループブロックを表示する</string>
    <string name="activity_setting_checkbox_text_if" translatable="false">もしもブロック・ぬけるブロックを表示する</string>
    <string name="activity_setting_ip_length_error_text" translatable="false">桁数が間違っています</string>

    <!-- activity_setting_detail -->
    <string name="activity_setting_detail_toolbar_title">@string/common_setting_detail</string>
    <string name="activity_setting_detail_header_network">@string/common_network</string>
    <string name="activity_setting_detail_hint_text_port">@string/common_port_name</string>
    <string name="activity_setting_detail_header_speed" translatable="false">機体速度</string>
    <string name="activity_setting_detail_hint_text_speed" translatable="false">速度</string>
    <string name="activity_setting_detail_helper_text_speed" translatable="false">0 ~ 100で設定</string>

    <!-- block_back -->
    <string name="block_back_block_name">@string/common_back_name</string>
    <string name="block_back_block_time_text">@string/common_time_unit</string>
    <string name="block_back_block_time_tools_text">@string/common_error_text</string>
    <string name="block_back_block_add">@string/common_block_add</string>

    <!-- block_break -->
    <string name="block_break_block_name">@string/common_break_name</string>
    <string name="block_break_block_add">@string/common_block_add</string>

    <!-- block_end -->
    <string name="block_end_block_name">おわり</string>

    <!-- block_for_end -->
    <string name="block_for_end_block_name">@string/common_for_end_name</string>
    <string name="block_for_end_block_add">@string/common_block_add</string>

    <!-- block_for_start -->
    <string name="block_for_start_block_name">@string/common_for_start_name</string>
    <string name="block_for_start_loop_count_text">@string/common_count_unit</string>
    <string name="block_for_start_loop_count_tools_text">@string/common_error_text</string>
    <string name="block_for_start_block_add">@string/common_block_add</string>

    <!-- block_front -->
    <string name="block_forward_block_name">@string/common_forward_name</string>
    <string name="block_forward_block_time_text">@string/common_time_unit</string>
    <string name="block_forward_block_time_tools_text">@string/common_error_text</string>
    <string name="block_forward_blocK_add">@string/common_block_add</string>

    <!-- block_if_end -->
    <string name="block_if_end_block_name">@string/common_if_end_name</string>
    <string name="block_if_end_block_add">@string/common_block_add</string>

    <!-- block_if_start -->
    <string name="block_if_start_block_name">@string/common_if_start_name</string>
    <string name="block_if_start_compare_sensor_value_tools_text">@string/common_error_text</string>
    <string name="block_if_start_block_add">@string/common_block_add</string>
    <string name="block_if_start_compare_sensor_false_text">いいえ</string>

    <!-- block_left -->
    <string name="block_left_block_name">@string/common_left_name</string>
    <string name="block_left_block_time_text">@string/common_time_unit</string>
    <string name="block_left_block_time_tools_text">@string/common_error_text</string>
    <string name="block_left_block_add">@string/common_block_add</string>

    <!-- block_right -->
    <string name="block_right_block_name">@string/common_right_name</string>
    <string name="block_right_block_time_text">@string/common_time_unit</string>
    <string name="block_right_block_time_tools_text">@string/common_error_text</string>
    <string name="block_right_block_add">@string/common_block_add</string>

    <!-- block_start -->
    <string name="block_start_block_name">はじまり</string>
    <string name="block_start_block_add">@string/common_block_add</string>

    <!-- conductor_if_start -->
    <string name="conductor_if_start_compare_sensor_true_text">はい</string>
    <string name="conductor_if_start_block_add">@string/common_block_add</string>

    <!-- receive_udp_dialog -->
    <string name="receive_udp_dialog_description">ロボットがうごいています....</string>
    <string name="receive_udp_dialog_button_stop_text">とめる</string>

</resources>
