<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Script.SettingDetailActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/setting_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar_color"
            android:theme="@style/AppTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/activity_setting_detail_toolbar_title"
            app:titleTextColor="@color/white_text_color">

        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/setting_detail_network_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/setting_detail_toolbar">

            <TextView
                android:id="@+id/setting_detail_header_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_network"
                android:textSize="@dimen/setting_text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/common_network" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setting_detail_port_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/color_green"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_detail_header_network"
                app:layout_constraintWidth_percent="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/setting_detail_port_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_setting_detail_hint_text_port"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/default_text_color"
                    android:textSize="@dimen/setting_text_size_large"
                    tools:text="50000" />

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/setting_detail_network_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@+id/setting_detail_network_group" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/setting_detail_speed_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/setting_detail_network_divider">

            <TextView
                android:id="@+id/setting_detail_header_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_setting_detail_header_speed"
                android:textSize="@dimen/setting_text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/activity_setting_detail_header_speed" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/setting_detail_speed_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/color_green"
                app:counterEnabled="true"
                app:counterMaxLength="3"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_detail_header_speed"
                app:layout_constraintWidth_percent="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/setting_detail_speed_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_setting_detail_header_speed"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/default_text_color"
                    android:textSize="@dimen/setting_text_size_large"
                    tools:text="80" />

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/setting_detail_speed_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@+id/setting_detail_speed_group" />

    </android.support.constraint.ConstraintLayout>

</layout>
